UtahLiveDataTest/src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>HideIfNotCreatedByBudgetUpload__c</fullName>
        <formula>IF(CreatedByBudgetUpload__c, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfNotCreatedByBudgetUpload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideInitiateAwardButton__c</fullName>
        <formula>IF((( ProgramManager__c ==  $User.Id ) &amp;&amp; ( DisplayInitiateAward__c == false)),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideInitiateAwardButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideModifyAssignment__c</fullName>
        <formula>IF((ProgramManager__c ==  $User.Id )&amp;&amp;(ProjectOfficer__c != null || DataEvaluator__c != null || GrantMonitor__c != null) &amp;&amp; ISPICKVAL( Status__c , &apos;Negotiation In Progress&apos;) ,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Modify Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNegotiationButton__c</fullName>
        <formula>NOT(IF(ExternalApplicantStatus__c=&apos;Revision Initiated&apos;,True,False))</formula>
        <label>Hide Negotiation Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewChangeRequest__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c,&apos;Revision Initiated&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide New Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewPreAwardRequestButton__c</fullName>
        <formula>IF((ProgramManager__c == $User.Id &amp;&amp;  ISPICKVAL( Status__c , &apos;Negotiation In Progress&apos;) &amp;&amp;  DataEvaluator__c != null &amp;&amp;  ProjectOfficer__c != null &amp;&amp;  GrantMonitor__c != null ),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideNewPreAwardRequestButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewReviewBtn__c</fullName>
        <description>Logic for Hiding New Review Button</description>
        <formula>NOT(OR(ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Internally Reviewed&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding New Review Button</inlineHelpText>
        <label>Hide New Review Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNotOwner__c</fullName>
        <formula>$User.Id != OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Not Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePreAwardTab__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Status__c,&apos;Revision Initiated&apos;),ISPICKVAL(Status__c,&apos;Revision Completed&apos;),ISPICKVAL(Status__c,&apos;Converted to Award&apos;)))</formula>
        <label>Hide PreAward Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideResubmitApplicationBtn__c</fullName>
        <formula>NOT(AND(OR(TEXT(ChangeRequestStatus__c) == &apos;Change Request Accepted&apos;,TEXT(ChangeRequestStatus__c) == &apos;Change Request Assigned&apos;) ,  OwnerId =  $User.Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideResubmitApplicationBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideRevisionBlock__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Revision Initiated&apos;),False,True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideRevisionBlock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSendtoReviewButton__c</fullName>
        <formula>IF(TEXT( Status__c ) = &apos;Created&apos; &amp;&amp; SecondaryApplicant__r.Id == $User.Id , false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideSendtoReviewButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideShareBtn__c</fullName>
        <description>Show share button only to owner of the record.</description>
        <formula>OwnerId !=  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Show share button only to owner of the record.</inlineHelpText>
        <label>HideShareBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubDate__c</fullName>
        <formula>SubstantiallyCompletedDate__c==null || NOT(ISPICKVAL(Announcement__r.Program__r.ProgramPathway__c, &quot;Fed-Formula&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideSubDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideUSBEFields__c</fullName>
        <formula>IF(Announcement__r.Program__r.Account__r.Name == &apos;USBE&apos;,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideUSBEFields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideWBS__c</fullName>
        <formula>OR(Announcement__r.Program__r.HideWBS__c, Announcement__r.OrganizationName__c = &apos;UOVC&apos;)</formula>
        <label>HideWBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideWaiveApplication__c</fullName>
        <formula>IF(OR(GrantorOrganizationName__c != &apos;USBE&apos;, TEXT(Status__c) != &apos;Created&apos;, TEXT(Status__c) != &apos;Internally Reviewed&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideWaiveApplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideWithdrawBtn__c</fullName>
        <formula>If(NOT(Announcement__r.AllowApplicationsWithdrawl__c),true, IF(NOT(ISPICKVAL(Status__c, &apos;Submitted to Grantor&apos;)),true,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Withdraw Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HistoryParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>History Parent Id</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application History</relationshipLabel>
        <relationshipName>ApplicationHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HistoryReason__c</fullName>
        <inlineHelpText>This field is used to track Object History</inlineHelpText>
        <label>History Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <formula>Announcement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndirectCostPercentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Indirect Cost Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IndirectCostPicklist__c</fullName>
        <label>Indirect Cost Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InitialRequestedAmount__c</fullName>
        <description>Original Requested Amount from Applicant</description>
        <inlineHelpText>Original Requested Amount from Applicant</inlineHelpText>
        <label>Initial Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InitialSubmissionPDFID__c</fullName>
        <label>Initial Submission PDF ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalStatus__c</fullName>
        <formula>If(AND(NumberOfReviewersAssigned__c &gt; 0, NumberOfReviewsInProgress__c =0 ,  NumberOfReviewsFinalized__c =0),&apos;Reviewers Assigned&apos;,
If(AND(NumberOfReviewersAssigned__c = NumberOfReviewsFinalized__c, NumberOfReviewsInProgress__c =0),&apos;Reviews Finalized&apos;,
&apos;Reviews In Progress&apos;
)
)</formula>
        <inlineHelpText>Field to find out the status of application. To be used by an internal user ONLY.</inlineHelpText>
        <label>Internal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsAnnouncementActive__c</fullName>
        <formula>TEXT( Announcement__r.Status__c ) = &apos;Active&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAnnouncementActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApplicantNegotiationCompleted__c</fullName>
        <formula>IF($User.IsApplicant__c || $User.IsExternalUser__c, true, IF(Text( Status__c ) = &apos;Revision Completed&apos; ||Text( Status__c ) = &apos;Awarded&apos; ,false,true))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsApplicantNegotiationCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApplicant__c</fullName>
        <description>IF($User.IsApplicant__c || $User.IsExternalUser__c, true, IF(Text( Status__c ) = &apos;Revision Initiated&apos; || Text( Status__c ) = &apos;Revision Completed&apos; || Text( Status__c ) = &apos;Converted to Award&apos;,false,true))</description>
        <formula>IF(Text( Status__c ) = &apos;Revision Initiated&apos; || Text( Status__c ) = &apos;Revision Completed&apos; || Text( Status__c ) = &apos;Converted to Award&apos;,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsApplicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExternal__c</fullName>
        <formula>IF($User.IsApplicant__c || $User.IsExternalUser__c, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsExternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFedCompetitive__c</fullName>
        <formula>ISPICKVAL(Announcement__r.Program__r.ProgramPathway__c, &apos;Fed-Competitive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsFedCompetitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGranteeAppApproved__c</fullName>
        <formula>(Text(Status__c) == &apos;Approved&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GranteeAppApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGrantor__c</fullName>
        <formula>((RecordType.Name) == &apos;Grantee&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Grantor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecordRecalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRecordRecalled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSoleSourceApplication__c</fullName>
        <formula>IF ( AnnouncementType__c == &apos;Sole Source&apos;, true, false)</formula>
        <label>Is Sole Source Application?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEAKeyPOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LEA Key POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApplicationsievG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LEAName__c</fullName>
        <formula>ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReviewDecision__c</fullName>
        <label>Last Review Decision</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReviewStep__c</fullName>
        <label>Last Review Step</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadLastModifiedDate__c</fullName>
        <label>LeadLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadNoUpdate__c</fullName>
        <formula>OR(Announcement__r.FOALead__c = null, Announcement__r.FOALead__r.LastUpdateDate__c = LeadLastModifiedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LeadNoUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagementCorrections__c</fullName>
        <label>ManagementCorrections</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManagementOverallComs__c</fullName>
        <description>Overall comments OverallsComments__c from Management Review</description>
        <label>Overall Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManagementQuestions__c</fullName>
        <label>Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ManagementRecAmnt__c</fullName>
        <description>Amount recommended by committee in management. assigned value in ReviewAssignmentSubmitHelper</description>
        <label>ManagementRecAmnt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ManagementSuggestions__c</fullName>
        <label>Suggestions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MatchAmount__c</fullName>
        <label>Total Match Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MgmtRecAmount__c</fullName>
        <description>Recommended Amount after Management Review</description>
        <label>Mgmt Recommended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <description>IF( RecordType.DeveloperName = &apos;Grantee&apos;,&apos;APP-&apos;+ FederalAwardingAgency__r.Code__c +&apos;-&apos;,&apos;AP-&apos;+ ExternalOrganization__r.Code__c  + &apos;-&apos;)</description>
        <formula>IF( OR($Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c = &apos;StateasGrantor&apos; ,$Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c = &apos;Recipient&apos; )  ,&apos;AP-&apos;+ Announcement__r.Program__r.Account__r.Code__c +&apos;-&apos;,&apos;APP-&apos;+ Announcement__r.Program__r.Account__r.Code__c +&apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Defines the template for the Name field which gets populated automatically by the trigger</inlineHelpText>
        <label>Name Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfPatientsBenefited__c</fullName>
        <formula>PreApplication__r.NumberOfPatientsBenefited__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Of Patients Benefited?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReviewersAssigned__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field will never decrement.</description>
        <label>Number of Reviewers Assigned</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReviewsFinalized__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>System populated. Indicates the number of reviews which are &quot;Review Completed&quot; for this application</inlineHelpText>
        <label>Number of Reviews Finalized</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReviewsInProgress__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>System populated. Indicates the number of reviews which are in progress for this application</inlineHelpText>
        <label>Number of Reviews In Progress</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfReviews__c</fullName>
        <label>Number Of Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfServiceAreasRequested__c</fullName>
        <label>Number Of Service Areas Requested</label>
        <summaryForeignKey>ApplicationServiceArea__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfStepsAddedTo__c</fullName>
        <label>Number of Steps Added To</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OD Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ODApprovedDateTime__c</fullName>
        <label>OD Aproved DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OGMApprovedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OGM Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OGMApprovedDateTime__c</fullName>
        <label>OGM Approved DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ObligatedAmount__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Obligated Amount</description>
        <label>Obligated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OneStepReviewCommentsNew__c</fullName>
        <description>One Step Review Comments for LEA</description>
        <label>OneStepReviewCommentsNew</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OneStepReviewComments__c</fullName>
        <description>One Step Review Comments for LEA</description>
        <label>OneStepReviewComments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityCategory__c</fullName>
        <label>Opportunity Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Discretionary</fullName>
                </value>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Earmark</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityLink__c</fullName>
        <formula>HYPERLINK(
  &apos;https://na31.salesforce.com/&apos;+ Announcement__r.Id, 
  Announcement__r.AnnouncementNumber__c

)</formula>
        <label>Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityNumber__c</fullName>
        <label>OpportunityNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityTitle__c</fullName>
        <label>OpportunityTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationApplications__c</fullName>
        <formula>ExternalOrganization__r.Name&amp;&apos;(&apos;&amp;TEXT(CountSubmittedApps__c)&amp;&apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Applications</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationalDUNS__c</fullName>
        <formula>ExternalOrganization__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organizational DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverallNegotiatedAmount__c</fullName>
        <label>Recommended Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OwnerManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications13</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageTemplateName__c</fullName>
        <description>Auto populated. Used to print PDF files for applications at Awards or Review Assignment level</description>
        <label>Page Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApplicationshKRn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApplicationshKRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApplicationshKQX</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PostedDateTime__c</fullName>
        <formula>Announcement__r.PostedDateTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PreApplicationDeadline__c</fullName>
        <label>Pre-Application Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre Application</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreWithdrawlStatus__c</fullName>
        <description>Status of the application prior to the submitting withdrawl request. If said request is rejected the application returns to this status.</description>
        <label>PreWithdrawlStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryApplicantName__c</fullName>
        <description>This field is used in Application Cover Page form</description>
        <formula>PrimaryApplicant__r.FirstName&amp;&quot; &quot;&amp;PrimaryApplicant__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryApplicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is to store the primary Applicant user details. This is used to control Submit Application Button</description>
        <label>Primary Applicant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applicationstpqm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramAccountName__c</fullName>
        <formula>Announcement__r.Program__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramBudgetTypeUSBE__c</fullName>
        <formula>TEXT( Announcement__r.Program__r.ProgramBudgetTypeUSBE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProgramBudgetTypeUSBE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramFiscalYear__c</fullName>
        <formula>Announcement__r.Program__r.FiscalYear__r.Name</formula>
        <label>Program Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramId__c</fullName>
        <formula>CASESAFEID(Announcement__r.Program__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApplicationsProgramManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <formula>HYPERLINK( &apos;/&apos;+Announcement__r.Program__c , Announcement__r.Program__r.Name)</formula>
        <label>Program ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramTitle__c</fullName>
        <formula>Announcement__r.Program__r.ProgramName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectAbstract__c</fullName>
        <label>Project Abstract</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProjectBudgetPlusAdminCostSum__c</fullName>
        <label>ProjectBudgetPlusAdminCostSum</label>
        <summarizedField>ApplicationBudgetCategory2__c.ProjectBudgetPlusAdminCost__c</summarizedField>
        <summaryForeignKey>ApplicationBudgetCategory2__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the external user who is directing the project</inlineHelpText>
        <label>Project Director/Principle Investigator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectManagerFirstName__c</fullName>
        <label>Project Manager First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectManagerLastName__c</fullName>
        <label>Project Manager Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectManagerName__c</fullName>
        <formula>ProjectManagerFirstName__c &amp; &quot;,&quot; &amp; ProjectManagerLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectOfficer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodEndDate__c</fullName>
        <label>Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodReadOnly__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Announcement__r.Program__r.ProgramPathway__c, &apos;State-Competitive&apos;), ISPICKVAL(Announcement__r.Program__r.ProgramPathway__c, &apos;Fed-Competitive&apos;)))</formula>
        <label>ProjectPeriodReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectPeriodStartDate__c</fullName>
        <description>Project Period Start Date as entered by the applicant.</description>
        <label>Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectServiceArea2__c</fullName>
        <label>Project Service Area 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectServiceArea__c</fullName>
        <label>Project Service Area 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProposalDescription__c</fullName>
        <description>Brief description of the proposal/project.</description>
        <inlineHelpText>Brief description of the proposal/project.</inlineHelpText>
        <label>Proposal Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ProposedEndDate__c</fullName>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProposedStartdate__c</fullName>
        <label>Proposed Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QualifiedAnnouncements__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This look up has been created for the updating the qualified opportunity status to &apos;Converted to Opportunity &apos; on the creation of application.</description>
        <label>Qualified Announcements</label>
        <referenceTo>OpportunityQualification__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReadOnlyAfterSubmission__c</fullName>
        <formula>false</formula>
        <label>Read Only After Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecallComment__c</fullName>
        <label>Recall Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecommendedAmount2__c</fullName>
        <label>Recommended Amount 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecordComplete__c</fullName>
        <formula>IF(RecordCompletionPercentage__c = 100/100, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordCompletionPercentage__c</fullName>
        <label>Record Completion Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RecordIncomplete__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Record Incomplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordSubmitted__c</fullName>
        <formula>NOT( 
IF( 
ISPICKVAL(Status__c, &apos;Submitted&apos;) 
|| ISPICKVAL(Status__c, &apos;Approved&apos;) 
|| ISPICKVAL(Status__c, &apos;Disapproved&apos;) 
|| ISPICKVAL(Status__c, &apos;Awarded&apos;) 
|| ISPICKVAL(Status__c, &apos;Change Requested&apos;) 
, FALSE, TRUE) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Submitted ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RejectComment__c</fullName>
        <label>Reject Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemainingBudget__c</fullName>
        <formula>BudgetAllocation__c - TotalFederalMatch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RemainingBudget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RenderDeleteButton__c</fullName>
        <formula>if($User.ProfileName__c = &apos;System Administrator&apos;,false,NOT(OR(Text(Status__c) = &apos;In Progress&apos;,Text(Status__c) = &apos;Complete&apos;)) )</formula>
        <inlineHelpText>Decision to display the Delete Button on Application</inlineHelpText>
        <label>Render Delete Button</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>